--- a/part1/task2/index.html
+++ b/part1/task2/index.html
@@ -148,6 +148,12 @@
             </select>
         </div>
         <div>
+            <label for="" class="left">城市</label>
+            <select class="right" name="" id="">
+                <option value="北京">北京</option>
+            </select>
+        </div>
+        <div>
             <label for="" class="left">爱好</label>
             <input class="right" type="checkbox" id="sport"><label for="sport">运动</label>
             <input type="checkbox" id="art"><label for="art">艺术</label>
