--- a/part1/task7/index.html
+++ b/part1/task7/index.html
@@ -68,6 +68,50 @@
         <p>关于新世界，你不知道的还有什么？</p>
       </div>
       <div class="find">
+
+        <form class="country" action="index.html" method="post">
+          <div class="my-select">
+            <select name="country">
+            <option value="china" selected="selected">中国</option>
+            </select>
+          </div>
+        </form>
+        <form class="province" action="index.html" method="post">
+          <select name="province">
+          <option value="beijing" selected="selected">北京市</option>
+          <option value="tianjin">天津市</option>
+          <option value="hebei">河北省</option>
+          </select>
+        </form>
+        <form class="city" action="index.html" method="post">
+          <select name="city">
+          <option value="beijing" selected="selected">北京市</option>
+          </select>
+        </form>
+      </div>
+      <div class="activities1">
+        <div class="container">
+          <div class="col-3 item">
+            <img src="images/a1.jpg" alt="a1">
+            <p class="a-title">北京活动</p>
+            <p class="a-sub-title">新社区大联盟</p>
+          </div>
+          <div class="col-3 item">
+            <img src="images/a1.jpg" alt="a1">
+            <p class="a-title">北京活动</p>
+            <p class="a-sub-title">新社区大联盟</p>
+          </div><div class="col-3 item">
+            <img src="images/a1.jpg" alt="a1">
+            <p class="a-title">北京活动</p>
+            <p class="a-sub-title">新社区大联盟</p>
+          </div><div class="col-3 item">
+            <img src="images/a1.jpg" alt="a1">
+            <p class="a-title">北京活动</p>
+            <p class="a-sub-title">新社区大联盟</p>
+          </div>
+        </div>
+      </div>
+      <div class="activities2">
         
       </div>
     </div>
