--- a/part1/task7/index.html
+++ b/part1/task7/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/index.css">
@@ -68,26 +69,31 @@
         <p>关于新世界，你不知道的还有什么？</p>
       </div>
       <div class="find">
-
-        <form class="country" action="index.html" method="post">
-          <div class="my-select">
-            <select name="country">
-            <option value="china" selected="selected">中国</option>
+        <p class="find-title">查找新世界城市活动信息</p>
+        <div class="find-space"></div>
+        <p class="find-sub">每个城市的有不同的活动信息，请自主查询您所需要了解的城市</p>
+        <div class="selects">
+          <form class="country" action="index.html" method="post">
+            <div class="my-select">
+              <select name="country">
+              <option value="china" selected="selected">中国</option>
+              </select>
+            </div>
+          </form>
+          <form class="province" action="index.html" method="post">
+            <select name="province">
+            <option value="beijing" selected="selected">北京市</option>
+            <option value="tianjin">天津市</option>
+            <option value="hebei">河北省</option>
             </select>
-          </div>
-        </form>
-        <form class="province" action="index.html" method="post">
-          <select name="province">
-          <option value="beijing" selected="selected">北京市</option>
-          <option value="tianjin">天津市</option>
-          <option value="hebei">河北省</option>
-          </select>
-        </form>
-        <form class="city" action="index.html" method="post">
-          <select name="city">
-          <option value="beijing" selected="selected">北京市</option>
-          </select>
-        </form>
+          </form>
+          <form class="city" action="index.html" method="post">
+            <select name="city">
+            <option value="beijing" selected="selected">北京市</option>
+            </select>
+          </form>
+          <button type="button" name="button">搜索</button>
+        </div>
       </div>
       <div class="activities1">
         <div class="container">
@@ -112,10 +118,136 @@
         </div>
       </div>
       <div class="activities2">
-        
+        <div class="container">
+          <div class="focus-act clearfix">
+            <div class="focus-img fl">
+              <p class="a2i-title1">新世界</p>
+              <p class="a2i-title2">TIME</p>
+              <p class="a2i-title3">@新世界－北京</p>
+              <p class="a2i-title4">2016.04.01</p>
+            </div>
+            <div class="focus-content fr">
+              <p class="a2c-title">
+                新世界 ／ <span class="page-num">01</span>
+              </p>
+              <p class="a2c-content">
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个新世界新世界是个
+              </p>
+              <a class="a2c-btn" href="javascript:;">更多详情</a>
+            </div>
+          </div>
+          <div class="normal-act clearfix">
+            <div class="col-4 normal-act-red">
+              <p>
+                新时代
+                <br>
+                关于爱生活的我们
+              </p>
+              <div class="normal-act-space"></div>
+              <a class="normal-act-btn" href="javascript:;">查看更多</a>
+            </div>
+            <div class="col-4 normal-act-white">
+              <p>
+                新时代
+                <br>
+                关于爱生活的我们
+              </p>
+              <div class="normal-act-space"></div>
+              <a class="normal-act-btn" href="javascript:;">查看更多</a>
+            </div>
+            <div class="col-4 normal-act-img"><img src="images/normalact.jpg" alt=""></div>
+          </div>
+
       </div>
+      <div class="volunteer">
+        <div class="container">
+          <div class="">
+            <p class="volunteer-title">成为我们的志愿者</p>
+            <div class="volunteer-spcae"></div>
+            <p class="volunteer-sub-title">新世界的大家庭需要每一个爱生活的人的加入，如果你够年轻，有梦想，有激情 那就不要犹豫，快来加入我们，成为改变所有人生活的人 </p>
+          </div>
+          <div class="clearfix">
+            <div class="clauses col-4">
+              <ul>
+                <li class="clause-item">
+                  <p class="clause-title">新世界志愿者协议</p>
+                  <p class="clause-content">
+                    加入新世界志愿者的人员必须遵守中华人民共共和国的 相关法律法规，并且本着平等资源的原则 ......
+                  </p>
+                  <a class="clause-more" href="javascript:;">
+                    <span class="more-arrow">
+                      >
+                    </span>
+                    more
+                  </a>
+                </li>
+                <li class="clause-item">
+                  <p class="clause-title">
+                    新世界志愿者权利
+                  </p>
+                  <p class="clause-content">
+                    加入新世界志愿者的人员必须遵守中华人民共共和国的 相关法律法规，并且本着平等资源的原则 ......
+                  </p>
+                  <a class="clause-more" href="javascript:;">
+                    <span class="more-arrow">
+                      >
+                    </span>
+                    more
+                  </a>
+                </li>
+                <li class="clause-item">
+                  <p class="clause-title">
+                    更多条款
+                  </p>
+                  <p class="clause-content"></p>
+                  <a class="clause-more" href="javascript:;">
+                    <span class="more-arrow">
+                      >
+                    </span>
+                    more
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="submite col-8">
+              <div class="input-group">
+                <input class="" type="text" class="form-control" placeholder="&nbsp;&nbsp;&nbsp;姓名:">
+                <input class="" type="text"  placeholder="&nbsp;&nbsp;&nbsp;年龄:">
+                <input class="" type="text"  placeholder="&nbsp;&nbsp;&nbsp;联系方式:">
+                <input class="" type="text"  placeholder="&nbsp;&nbsp;&nbsp;联系地址:">
+                <textarea class="life" name="name" rows="8" cols="80" placeholder="&nbsp;请简单描述您梦想的生活:"></textarea>
+                <button class="" type="button" name="button">提交申请</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </main>
+  <footer class="footer clearfix">
+    <div class="contact">
+      <p class="contact-title">联系我们</p>
+      <p class="contact-sub-title">为了更好的获取我们最新的产品资讯，您可以留下您的电子邮箱快速订阅我们的产品资讯 也可以通过以下任何方式关注我们动态</p>
+      <input type="text" name="" value="" placeholder=" someone@email.com">
+      <button type="button" name="button">提交</button>
+      <div class="socials">
+        <a class="social-item" href="javascript:;"><i class="fa fa-qq fa-2x" aria-hidden="true"></i></a>
+        <a class="social-item" href="javascript:;"><i class="fa fa-weibo fa-2x" aria-hidden="true"></i></a>
+        <a class="social-item" href="javascript:;"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+        <a class="social-item" href="https://github.com/tanteichang"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+      </div>
+
+    </div>
+    <div class="copyright">
+      <div class="container">
+        &copy;2016新世界
+        <a class="toup fr" href="#">Back to up</a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
