--- a/part1/task7/src/index.html
+++ b/part1/task7/src/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="dist/css/reset.css">
-  <link rel="stylesheet" href="dist/css/base.css">
-  <link rel="stylesheet" href="dist/css/index.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <title>task7</title>
 </head>
@@ -18,7 +18,7 @@
   <header class="header clearfix">
     <div class="container">
       <div class="logo fl">
-        <a href="#"><img src="dist/images/logo.png" alt="logo"><span> 新世界</span></a>
+        <a href="#"><img src="images/logo.png" alt="logo"><span> 新世界</span></a>
       </div>
       <nav>
         <ul class="fr">
@@ -38,27 +38,27 @@
       <div class="sub-title">新时代，年轻的人们让我们一起体验新生活，享受新生活</div>
       <a class="btn" href="javascript:;">开始体验</a>
       <div class="mask"></div>
-      <img src="dist/images/bg.jpg" alt="background-image">
+      <img src="images/bg.jpg" alt="background-image">
     </div>
     <div class="intro-container clearfix">
       <div class="row container">
         <div class="col-3 item">
-          <img src="dist/images/1.png" alt="">
+          <img src="images/1.png" alt="">
           <p>打造全新世界观，让你更爱生活</p>
           <div class="space"></div>
         </div>
         <div class="col-3 item">
-          <img src="dist/images/2.png" alt="">
+          <img src="images/2.png" alt="">
           <p>丰富多彩的公益活动，发挥新世界的主人公意识</p>
           <div class="space"></div>
         </div>
         <div class="col-3 item">
-          <img src="dist/images/3.png" alt="">
+          <img src="images/3.png" alt="">
           <p>时尚的新理念，超前体验未知的生活</p>
           <div class="space"></div>
         </div>
         <div class="col-3 item">
-          <img src="dist/images/4.png" alt="">
+          <img src="images/4.png" alt="">
           <p>完善的培养机制，培养你全新的世界观</p>
         </div>
       </div>
@@ -98,20 +98,20 @@
       <div class="activities1">
         <div class="container">
           <div class="col-3 item">
-            <img src="dist/images/a1.jpg" alt="a1">
+            <img src="images/a1.jpg" alt="a1">
             <p class="a-title">北京活动</p>
             <p class="a-sub-title">新社区大联盟</p>
           </div>
           <div class="col-3 item">
-            <img src="dist/images/a1.jpg" alt="a1">
+            <img src="images/a1.jpg" alt="a1">
             <p class="a-title">北京活动</p>
             <p class="a-sub-title">新社区大联盟</p>
           </div><div class="col-3 item">
-            <img src="dist/images/a1.jpg" alt="a1">
+            <img src="images/a1.jpg" alt="a1">
             <p class="a-title">北京活动</p>
             <p class="a-sub-title">新社区大联盟</p>
           </div><div class="col-3 item">
-            <img src="dist/images/a1.jpg" alt="a1">
+            <img src="images/a1.jpg" alt="a1">
             <p class="a-title">北京活动</p>
             <p class="a-sub-title">新社区大联盟</p>
           </div>
@@ -157,7 +157,7 @@
               <div class="normal-act-space"></div>
               <a class="normal-act-btn" href="javascript:;">查看更多</a>
             </div>
-            <div class="col-4 normal-act-img"><img src="dist/images/normalact.jpg" alt=""></div>
+            <div class="col-4 normal-act-img"><img src="images/normalact.jpg" alt=""></div>
           </div>
 
       </div>
