--- a/part1/task7/index.html
+++ b/part1/task7/index.html
@@ -65,7 +65,7 @@
     </div>
     <div class="activity-container">
       <div class="title">
-        <img src="images/logo-big.png" alt="">
+        <img src="dist/images/logo-big.png" alt="">
         <p>关于新世界，你不知道的还有什么？</p>
       </div>
       <div class="find">
